jai ajouter des ID dans cetrain divs

--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,9 @@
   <div class="box">
     <input type="text" placeholder="Nom de Employee" class="input-search" id="inputSearch" />
     <button id="closesearchmodal">×</button>
-    <div id="modalholder"></div>
+    <div id="modalholder">
+
+    </div>
 
 
   </div>
@@ -102,16 +104,13 @@
       <div class="parent">
 <div class="div1">
   <h5>Salle de conférence</h5>
-  <button class="ajouterdanslessalle" > + </button>
-    <div class="leftplaces">
+  <button class="ajouterdanslessalle"  id="id1"> + </button>
+  <h4><span id="conferencenombre">0</span> / <span>8</span></h4>
+    <div class="leftplaces" id="cont1">
   
-    <div class="grid-item">
     
-      <img src="https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcQB8ivx4QwwAFC2DDeNITJMqx1ZLds_rZgOur8DWQtVPmj0BjAWq_IWWuSmzbI2xaN-Us24CvG2T9bbrAIBIDbdMShVNMG0EFH3fI7XdVs_6y625yciGWT6MMroJTaEZOqJhk5nWCGOCZ0&s=19" alt="image" class="item-img">
-    <button class="item-btn">X</button>
+     
   
-</div>
-
   
   <!-- <div class="grid-item">2</div>
   <div class="grid-item">3</div>
@@ -125,13 +124,9 @@
 </div>
 <div class="div2">
   <h5>Réception</h5>
-  <button class="ajouterdanslessalle" > + </button>
-    <div class="leftplaces" id="centergrid">
-  <div class="grid-item">1kbngb</div>
-  <div class="grid-item"> <img src="" alt=""></div>
-  <div class="grid-item">3</div>
-  <div class="grid-item">3</div>
-  <div class="grid-item">3</div>
+  <button class="ajouterdanslessalle"   id="id2"> + </button>
+    <div class="leftplaces" id="cont2" >
+  
   
   
   </div>
@@ -139,24 +134,24 @@
 </div>
 <div class="div3">
   <h5>Salle des serveurs</h5>
-  <button class="ajouterdanslessalle" id="Salle des serveurs"> + </button>
-  <div class="leftplaces">
-
+  <button class="ajouterdanslessalle"   id="id3"> + </button>
+  <div class="leftplaces" id="cont3" >
+  
   </div>
 </div>
 <div class="div4">
   <h5>Salle de sécurité</h5>
-  <button class="ajouterdanslessalle" id="Salle de sécurité"> + </button>
-  <div class="leftplaces"></div>
+  <button class="ajouterdanslessalle"   id="id4" > + </button>
+  <div class="leftplaces" id="cont4"></div>
 </div>
 <div class="div5">
   <h5>Salle du personnel</h5>
-  <button class="ajouterdanslessalle" id="Salle du personnel"> + </button>
+  <button class="ajouterdanslessalle"   id="id5" > + </button>
   <div class="leftplaces"></div>
 </div>
 <div class="div6">
   <h5>Salle d’archives </h5>
-  <button class="ajouterdanslessalle" id="Salle d’archives"> + </button>
+  <button class="ajouterdanslessalle"   id="id6"> + </button>
   <div class="leftplaces"></div>
 </div>
 
