jai creé une fonction pour ajouter les card dans les zones avec des condition (sans specific nomrbe)

--- a/Index.html
+++ b/Index.html
@@ -109,22 +109,14 @@
     <div class="leftplaces" id="cont1">
   
     
-     
-  
-  
-  <!-- <div class="grid-item">2</div>
-  <div class="grid-item">3</div>
-  <div class="grid-item">4</div>
-  <div class="grid-item">5</div>
-  <div class="grid-item">6</div>
-  <div class="grid-item">7</div>
-  <div class="grid-item">8</div> -->
+
   </div>
 
 </div>
 <div class="div2">
   <h5>Réception</h5>
   <button class="ajouterdanslessalle"   id="id2"> + </button>
+  <h4><span id="receptionnombre">0</span> / <span>4</span></h4>
     <div class="leftplaces" id="cont2" >
   
   
@@ -135,6 +127,7 @@
 <div class="div3">
   <h5>Salle des serveurs</h5>
   <button class="ajouterdanslessalle"   id="id3"> + </button>
+  <h4><span id="serveurnombre">0</span> / <span>4</span></h4>
   <div class="leftplaces" id="cont3" >
   
   </div>
@@ -142,16 +135,19 @@
 <div class="div4">
   <h5>Salle de sécurité</h5>
   <button class="ajouterdanslessalle"   id="id4" > + </button>
+  <h4><span id="securitenombre">0</span> / <span>6</span></h4>
   <div class="leftplaces" id="cont4"></div>
 </div>
 <div class="div5">
   <h5>Salle du personnel</h5>
   <button class="ajouterdanslessalle"   id="id5" > + </button>
+  <h4><span id="personnelnombre">0</span> / <span>8</span></h4>
   <div class="leftplaces"></div>
 </div>
 <div class="div6">
   <h5>Salle d’archives </h5>
   <button class="ajouterdanslessalle"   id="id6"> + </button>
+  <h4><span id="archivesnombre">0</span> / <span>4</span></h4>
   <div class="leftplaces"></div>
 </div>
 
