jai creé une foction pour suprimmer emoloyeé et l'affisher sur le side bar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     <div class="input-ajout">
-      <input type="text" placeholder="Search..." class="search-input" />
+      
       <button class="ajoute-btn" id="ajoute-btn">+</button>
     </div>
 
@@ -105,7 +105,7 @@
 <div class="div1">
   <h5>Salle de conférence</h5>
   <button class="ajouterdanslessalle"  id="id1"> + </button>
-  <h4><span id="conferencenombre">0</span> / <span>8</span></h4>
+  <h4>Max : 8 employés</h4>
     <div class="leftplaces" id="cont1">
   
     
@@ -116,7 +116,7 @@
 <div class="div2">
   <h5>Réception</h5>
   <button class="ajouterdanslessalle"   id="id2"> + </button>
-  <h4><span id="receptionnombre">0</span> / <span>4</span></h4>
+  <h4>Max : 8 employés</h4>
     <div class="leftplaces" id="cont2" >
   
   
@@ -127,7 +127,7 @@
 <div class="div3">
   <h5>Salle des serveurs</h5>
   <button class="ajouterdanslessalle"   id="id3"> + </button>
-  <h4><span id="serveurnombre">0</span> / <span>4</span></h4>
+  <h4>Max : 4 employés</h4>
   <div class="leftplaces" id="cont3" >
   
   </div>
@@ -135,20 +135,20 @@
 <div class="div4">
   <h5>Salle de sécurité</h5>
   <button class="ajouterdanslessalle"   id="id4" > + </button>
-  <h4><span id="securitenombre">0</span> / <span>6</span></h4>
+  <h4>Max : 6 employés</h4>
   <div class="leftplaces" id="cont4"></div>
 </div>
 <div class="div5">
   <h5>Salle du personnel</h5>
   <button class="ajouterdanslessalle"   id="id5" > + </button>
-  <h4><span id="personnelnombre">0</span> / <span>8</span></h4>
-  <div class="leftplaces"></div>
+  <h4>Max : 8 employés</h4>
+  <div class="leftplaces"  id="cont5"></div>
 </div>
 <div class="div6">
   <h5>Salle d’archives </h5>
   <button class="ajouterdanslessalle"   id="id6"> + </button>
-  <h4><span id="archivesnombre">0</span> / <span>4</span></h4>
-  <div class="leftplaces"></div>
+  <h4>Max : 4 employés</h4>
+  <div class="leftplaces" id="cont6"></div>
 </div>
 
      </section>
